--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,9 @@ jobs:
 
     - name: (Windows) Use clang instead of MSVC
       if: runner.os == 'Windows'
-      run: conda install -c conda-forge clang clangxx clangdev ninja
+      run: |
+        conda install -c conda-forge clang_win-64
+        conda install -c conda-forge clang clangxx clangdev ninja
 
     - name: Extending conda environment for testing
       run: conda env update --file environment_test.yaml
