--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        runs-on: [ubuntu-latest, macos-latest, windows-latest]
+        runs-on: [windows-latest]
 
     defaults:
       run:
@@ -28,6 +28,10 @@ jobs:
     - name: Basic GitHub action setup
       uses: actions/checkout@v2
 
+    - name: (Windows) Add msbuild to PATH
+      if: runner.os == 'Windows'
+      uses: microsoft/setup-msbuild@v1.0.2
+
     - name: Set conda environment "test"
       uses: conda-incubator/setup-miniconda@v2
       with:
@@ -40,26 +44,17 @@ jobs:
 
     - name: (Windows) Use clang instead of MSVC
       if: runner.os == 'Windows'
-      run: conda install -c conda-forge clang-11
-
-    - name: Extending conda environment for testing
-      run: conda env update --file environment_test.yaml
-
-    - name: Extending conda environment to run examples
-      if: runner.os == 'Linux'
-      run: conda env update --file environment_examples.yaml
+      run: |
+        export CC="clang-cl.exe"
+        export CXX="clang-cl.exe"
 
     - name: Configure using CMake (with examples)
       if: runner.os == 'Linux'
       run: cmake . -DBUILD_TESTS=ON -DBUILD_EXAMPLES=ON
 
     - name: Configure using CMake (without examples)
-      if: runner.os == 'macOS'
+      if: runner.os != 'Linux'
       run: cmake . -DBUILD_TESTS=ON -DBUILD_EXAMPLES=OFF
-
-    - name: Configure using CMake (without examples, using clang)
-      if: runner.os == 'Windows'
-      run: cmake . -DBUILD_TESTS=ON -DBUILD_EXAMPLES=OFF -DCMAKE_C_COMPILER=clang-cl -DCMAKE_CXX_COMPILER=clang-cl
 
     - name: Build C++ tests & examples
       run: cmake --build .
