--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,19 +48,19 @@ jobs:
         mamba-version: "*"
         channels: conda-forge,defaults
         channel-priority: true
-        environment-file: {{ matrix.env }}
+        environment-file: ${{ matrix.env }}
         activate-environment: test
         auto-activate-base: false
 
     - name: Configure using CMake
       if: runner.os != 'Windows'
-      run: cmake . {{ matrix.config }}
+      run: cmake . ${{ matrix.config }}
 
     - name: (Windows) Configure using CMake
       if: runner.os == 'Windows'
       run: |
         conda install -c conda-forge ninja
-        cmake . -G Ninja {{ matrix.config }} -DCMAKE_C_COMPILER="clang-cl.exe" -DCMAKE_CXX_COMPILER="clang-cl.exe"
+        cmake . -G Ninja ${{ matrix.config }} -DCMAKE_C_COMPILER="clang-cl.exe" -DCMAKE_CXX_COMPILER="clang-cl.exe"
 
     - name: Build C++ tests & examples
       run: cmake --build .
