--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,15 +17,15 @@ jobs:
         runs-on: [ubuntu-latest, macos-latest, windows-latest]
         include:
           - runs-on: ubuntu-latest
-            config: -DBUILD_TESTS=ON -DBUILD_EXAMPLES=ON
+            config: -DBUILD_TESTS=1 -DBUILD_EXAMPLES=1
             conda: environment.yaml
             prop: tests & examples
           - runs-on: macos-latest
-            config: -DBUILD_TESTS=ON -DBUILD_EXAMPLES=OFF
+            config: -DBUILD_TESTS=1 -DBUILD_EXAMPLES=0
             conda: environment_no-examples.yaml
             prop: tests
           - runs-on: windows-latest
-            config: -DBUILD_TESTS=ON -DBUILD_EXAMPLES=OFF
+            config: -DBUILD_TESTS=1 -DBUILD_EXAMPLES=0
             conda: environment_no-examples.yaml
             prop: tests
 
