--- a/environment.yaml
+++ b/environment.yaml
@@ -2,7 +2,7 @@ channels:
   - conda-forge
 dependencies:
   # dependencies
-  - xtensor=0.21.10
+  - xtensor
   - eigen
 
   # optional dependencies
