--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,12 @@ jobs:
         activate-environment: test
         auto-activate-base: false
 
+    - name: Select GCC
+      if: matrix.gcc
+      run: |
+        echo "CC=gcc-${{ matrix.gcc }}" >> $GITHUB_ENV
+        echo "CXX=g++-${{ matrix.gcc }}" >> $GITHUB_ENV
+
     - name: Configure using CMake (!Windows)
       if: runner.os != 'Windows'
       run: cmake . ${{ matrix.config }}
