--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,8 @@ jobs:
             config: -DBUILD_TESTS=1 -DBUILD_EXAMPLES=1
             conda: environment.yaml
             prop: tests & examples
+            compiler: gcc
+            gcc: 8
           - runs-on: macos-latest
             config: -DBUILD_TESTS=1 -DBUILD_EXAMPLES=0
             conda: environment_no-examples.yaml
@@ -50,6 +52,12 @@ jobs:
         environment-file: ${{ matrix.conda }}
         activate-environment: test
         auto-activate-base: false
+
+    - name: Select GCC
+      if: matrix.gcc
+      run: |
+        echo "CC=gcc-${{ matrix.gcc }}" >> $GITHUB_ENV
+        echo "CXX=g++-${{ matrix.gcc }}" >> $GITHUB_ENV
 
     - name: Configure using CMake (!Windows)
       if: runner.os != 'Windows'
