--- a/docs/environment.yaml
+++ b/docs/environment.yaml
@@ -1,4 +1,3 @@
-name: docs
 channels:
   - conda-forge
 dependencies:
@@ -7,3 +6,5 @@ dependencies:
   - sphinx
   - sphinx_rtd_theme
   - python-goosefem
+  - pyxtensor
+  - eigen
