[CI] Using ctest command to improve output in case of test failure

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,7 +73,7 @@ jobs:
       run: cmake --build .
 
     - name: Run C++ ${{ matrix.prop }}
-      run: cmake --build . --target "RUN_TESTS_AND_EXAMPLES"
+      run: ctest --output-on-failure
 
     - name: Build and install Python module
       run: |
