Adding version information (incl. git commit hash)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,12 +77,36 @@ configure_file("${CMAKE_CURRENT_SOURCE_DIR}/GooseFEM.pc.in"
 install(FILES "${CMAKE_CURRENT_BINARY_DIR}/GooseFEM.pc"
         DESTINATION "${CMAKE_INSTALL_LIBDIR}/pkgconfig/")
 
+# Adding git-hash to separate header
+# ==================================
+
+# Get the current working branch
+execute_process(
+    COMMAND git rev-parse --abbrev-ref HEAD
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+    OUTPUT_VARIABLE GIT_BRANCH
+    OUTPUT_STRIP_TRAILING_WHITESPACE)
+
+# Get the latest commit hash
+execute_process(
+    COMMAND git rev-parse HEAD
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+    OUTPUT_VARIABLE GIT_COMMIT_HASH
+    OUTPUT_STRIP_TRAILING_WHITESPACE)
+
+# Write a "git.h" overwrite with the current branch/hash
+file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/git.h"
+    "#define GOOSEFEM_GIT_HASH \"${GIT_COMMIT_HASH}\"\n"
+    "#define GOOSEFEM_GIT_BRANCH \"${GIT_BRANCH}\"\n")
+
+# Overwrite the installed "include/GooseFEM/git.h" dummy
+install(FILES "${CMAKE_CURRENT_BINARY_DIR}/git.h" DESTINATION "include/GooseFEM/")
+
 # Add builds
 # ==========
 
 include("GooseFEMConfig.cmake")
 
-set(CTEST_TEST_TARGET_ALIAS RUN_TESTS_AND_EXAMPLES)
 include(CTest)
 
 if(BUILD_TESTS)
