Using setuptools_scm to manage version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,20 +15,17 @@ option(BUILD_EXAMPLES "Build examples" OFF)
 # Version
 # =======
 
-file(STRINGS "${CMAKE_CURRENT_SOURCE_DIR}/include/GooseFEM/config.h" GooseFEM_version_defines
-     REGEX "#define GOOSEFEM_VERSION_(MAJOR|MINOR|PATCH)")
+IF(DEFINED ENV{PKG_VERSION})
+    set(GOOSEFEM_VERSION $ENV{PKG_VERSION})
+else()
+    execute_process(
+        COMMAND python -c "from setuptools_scm import get_version; print(get_version())"
+        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+        OUTPUT_VARIABLE GOOSEFEM_VERSION
+        OUTPUT_STRIP_TRAILING_WHITESPACE)
+endif()
 
-foreach(ver ${GooseFEM_version_defines})
-    if(ver MATCHES "#define GOOSEFEM_VERSION_(MAJOR|MINOR|PATCH) ([0-9]*)(.*)")
-        set(GOOSEFEM_VERSION_${CMAKE_MATCH_1}
-            "${CMAKE_MATCH_2}"
-            CACHE INTERNAL "")
-    endif()
-endforeach()
-
-set(GOOSEFEM_VERSION ${GOOSEFEM_VERSION_MAJOR}.${GOOSEFEM_VERSION_MINOR}.${GOOSEFEM_VERSION_PATCH})
-
-message(STATUS "Building GooseFEM v${GOOSEFEM_VERSION}")
+message(STATUS "Building GooseFEM ${GOOSEFEM_VERSION}")
 
 # Set target
 # ==========
@@ -50,6 +47,13 @@ include(CMakePackageConfigHelpers)
 include(GNUInstallDirs)
 
 install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/include/" DESTINATION include)
+
+configure_file("include/${PROJECT_NAME}/version.h"
+               "${CMAKE_CURRENT_BINARY_DIR}/version.h"
+                @ONLY)
+
+install(FILES "${CMAKE_CURRENT_BINARY_DIR}/version.h"
+        DESTINATION "include/${PROJECT_NAME}/")
 
 install(TARGETS GooseFEM EXPORT GooseFEM-targets)
 
@@ -76,31 +80,6 @@ configure_file("${CMAKE_CURRENT_SOURCE_DIR}/GooseFEM.pc.in"
 
 install(FILES "${CMAKE_CURRENT_BINARY_DIR}/GooseFEM.pc"
         DESTINATION "${CMAKE_INSTALL_LIBDIR}/pkgconfig/")
-
-# Adding git-hash to separate header
-# ==================================
-
-# Get the current working branch
-execute_process(
-    COMMAND git rev-parse --abbrev-ref HEAD
-    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-    OUTPUT_VARIABLE GIT_BRANCH
-    OUTPUT_STRIP_TRAILING_WHITESPACE)
-
-# Get the latest commit hash
-execute_process(
-    COMMAND git rev-parse HEAD
-    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-    OUTPUT_VARIABLE GIT_COMMIT_HASH
-    OUTPUT_STRIP_TRAILING_WHITESPACE)
-
-# Write a "git.h" overwrite with the current branch/hash
-file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/git.h"
-    "#define GOOSEFEM_GIT_HASH \"${GIT_COMMIT_HASH}\"\n"
-    "#define GOOSEFEM_GIT_BRANCH \"${GIT_BRANCH}\"\n")
-
-# Overwrite the installed "include/GooseFEM/git.h" dummy
-install(FILES "${CMAKE_CURRENT_BINARY_DIR}/git.h" DESTINATION "include/GooseFEM/")
 
 # Add builds
 # ==========
