--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,12 @@ on:
 
 jobs:
 
-  default-shell:
+  standard:
 
     strategy:
+
       fail-fast: false
+
       matrix:
         runs-on: [ubuntu-latest, macos-latest, windows-latest]
         include:
@@ -84,9 +86,45 @@ jobs:
       run: |
         python test/basic-python/MeshQuad4.py
 
-    # - name: Run Python examples
-    #   if: runner.os == 'Linux'
-    #   run: |
-    #     python ./docs/examples/statics/FixedDisplacements_LinearElastic/example.py --no-plot
-    #     python ./docs/examples/statics/FixedDisplacements_LinearElastic/manual_partition.py --no-plot
+  py:
 
+    strategy:
+
+      fail-fast: false
+
+      matrix:
+        runs-on: [windows-latest]
+        include:
+          - runs-on: windows-latest
+            conda: .ci_environment_py.yaml
+
+    defaults:
+      run:
+        shell: bash -l {0}
+
+    name: "${{ matrix.runs-on }} • x64 ${{ matrix.args }} • py"
+    runs-on: ${{ matrix.runs-on }}
+
+    steps:
+
+    - name: Basic GitHub action setup
+      uses: actions/checkout@v2
+
+    - name: Set conda environment "test"
+      uses: conda-incubator/setup-miniconda@v2
+      with:
+        mamba-version: "*"
+        channels: conda-forge,defaults
+        channel-priority: true
+        environment-file: ${{ matrix.conda }}
+        activate-environment: test
+        auto-activate-base: false
+
+    - name: Build and install Python module
+      run: |
+        python setup.py build
+        python setup.py install
+
+    - name: Python tests
+      run: |
+        python test/basic-python/MeshQuad4.py
