--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,6 +84,7 @@ jobs:
 
     - name: Python tests
       run: |
+        python test/basic-python/version.py
         python test/basic-python/MeshQuad4.py
 
   py:
@@ -127,5 +128,5 @@ jobs:
 
     - name: Python tests
       run: |
+        python test/basic-python/version.py
         python test/basic-python/MeshQuad4.py
-        python test/basic-python/tmp.py
