--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -20,26 +20,25 @@ jobs:
     - name: Basic GitHub action setup
       uses: actions/checkout@v2
 
-    - name: Set conda environment "test"
-      uses: conda-incubator/setup-miniconda@v2
+    - name: Set conda environment (using micromamba for speed)
+      uses: mamba-org/provision-with-micromamba@main
       with:
-        mamba-version: "*"
-        channels: conda-forge,defaults
-        channel-priority: true
-        environment-file: docs/environment.yaml
-        activate-environment: test
-        auto-activate-base: false
+        environment-file: .ci_environment_docs.yaml
+        environment-name: myenv
 
-    - name: Run doxygen
-      working-directory: docs
-      run: doxygen
+    - name: Configure using CMake
+      run: cmake -Bbuild -DBUILD_DOCS=1
+
+    - name: Build the docs
+      working-directory: build
+      run: make docs
 
     - name: Deploy to GitHub Pages
       if: success()
       uses: crazy-max/ghaction-github-pages@v2
       with:
         target_branch: gh-pages
-        build_dir: docs/html
+        build_dir: build/html
         jekyll: false
         keep_history: false
       env:
