Adding dynamics example to CI

--- a/docs/examples/CMakeLists.txt
+++ b/docs/examples/CMakeLists.txt
@@ -48,15 +48,12 @@ if(DEBUG)
 endif()
 
 
-# create executable
-
 set(exec "statics_FixedDisplacements_LinearElastic_example")
 set(source "statics/FixedDisplacements_LinearElastic/example.cpp")
 add_executable(${exec} ${source})
 target_link_libraries(${exec} PRIVATE libraries)
 add_test(NAME ${exec} COMMAND ${exec})
 
-# create executable
 
 set(exec "statics_FixedDisplacements_LinearElastic_manual_partition")
 set(source "statics/FixedDisplacements_LinearElastic/manual_partition.cpp")
@@ -64,7 +61,6 @@ add_executable(${exec} ${source})
 target_link_libraries(${exec} PRIVATE libraries)
 add_test(NAME ${exec} COMMAND ${exec})
 
-# create executable
 
 set(exec "statics_MixedPeriodic_LinearElastic_example")
 set(source "statics/MixedPeriodic_LinearElastic/example.cpp")
@@ -72,7 +68,6 @@ add_executable(${exec} ${source})
 target_link_libraries(${exec} PRIVATE libraries)
 add_test(NAME ${exec} COMMAND ${exec})
 
-# create executable
 
 set(exec "statics_Periodic_ElastoPlastic_main")
 set(source "statics/Periodic_ElastoPlastic/main.cpp")
@@ -80,7 +75,6 @@ add_executable(${exec} ${source})
 target_link_libraries(${exec} PRIVATE libraries)
 add_test(NAME ${exec} COMMAND ${exec})
 
-# create executable
 
 set(exec "statics_Periodic_ElastoPlasticFiniteStrainSimo_main")
 set(source "statics/Periodic_ElastoPlasticFiniteStrainSimo/main.cpp")
@@ -88,7 +82,6 @@ add_executable(${exec} ${source})
 target_link_libraries(${exec} PRIVATE libraries)
 add_test(NAME ${exec} COMMAND ${exec})
 
-# create executable
 
 set(exec "statics_Periodic_LinearElastic_main")
 set(source "statics/Periodic_LinearElastic/main.cpp")
@@ -96,7 +89,6 @@ add_executable(${exec} ${source})
 target_link_libraries(${exec} PRIVATE libraries)
 add_test(NAME ${exec} COMMAND ${exec})
 
-# create executable
 
 set(exec "statics_Periodic_NonLinearElastic_main")
 set(source "statics/Periodic_NonLinearElastic/main.cpp")
@@ -105,3 +97,8 @@ target_link_libraries(${exec} PRIVATE libraries)
 add_test(NAME ${exec} COMMAND ${exec})
 
 
+set(exec "dynamics_Elastic-Verlet_main")
+set(source "dynamics/Elastic-Verlet/main.cpp")
+add_executable(${exec} ${source})
+target_link_libraries(${exec} PRIVATE libraries)
+# add_test(NAME ${exec} COMMAND ${exec}) # takes too long for testing
