--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -135,6 +135,10 @@ if(BUILD_DOCS)
     set(DOXYGEN_QUIET YES)
     set(DOXYGEN_WARN_IF_UNDOCUMENTED YES)
 
+    set(DOXYGEN_HTML_EXTRA_STYLESHEET
+        "${CMAKE_CURRENT_SOURCE_DIR}/docs/doxystyle/doxygen-awesome.css"
+        "${CMAKE_CURRENT_SOURCE_DIR}/docs/doxystyle/custom.css")
+
     set(DOXYGEN_ALIASES
         "rst=\\verbatim embed:rst:leading-asterisk"
         "endrst=\\endverbatim"
@@ -142,5 +146,6 @@ if(BUILD_DOCS)
 
     set(DOXYGEN_STRIP_FROM_INC_PATH "${CMAKE_CURRENT_SOURCE_DIR}/include")
     set(DOXYGEN_STRIP_FROM_PATH "${CMAKE_CURRENT_SOURCE_DIR}/include")
+
     doxygen_add_docs(docs "${CMAKE_CURRENT_SOURCE_DIR}/include")
 endif()
